@@ -1,6 +1,9 @@
 # ChangeLog for perl-core/PodParser
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.52 2011/07/30 12:23:48 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/perl-core/PodParser/ChangeLog,v 1.53 2012/04/28 01:46:55 aballier Exp $
+
+  28 Apr 2012; Alexis Ballier <aballier@gentoo.org> PodParser-1.380.0.ebuild:
+  keyword ~amd64-fbsd
 
   30 Jul 2011; Torsten Veller <tove@gentoo.org> PodParser-1.380.0.ebuild:
   Drop ~sparc-fbsd KEYWORD
